Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30355

[Reg 12->13] QML debugging is not stopped when application is killed before the QML debugger connects

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 14.0.0
    • Qt Creator 13.0.0-beta1
    • Debugger
    • None
    • 9c4bd40f7 (13.0)

      1. Start Qt Creator
      2. Open a QML application
      3. Start debugging
      4. When the C++ debugger starts, and before the QML debugger connects, kill the application (e.g. with the stop button in QtC)

      Expected: Both debugger progress indicators (QML & C++) are stopped
      Actual: Only one is stopped, the other one stays open infinitely

      It is possible to accumulate an arbitrary amount of debugger status bars this way.

      This is a regression to 12.0 in the sense that in 12.0 and earlier, the QML debugger asks about not being able to connect after a short time, with the option to abort QML debugging.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes