Debugger: Fix Qml debugger rampdown when not fully started

Fixes: QTCREATORBUG-30355
Change-Id: I3e7c1ef56db1fe48f5b571d21f89d20b7936cfb7
Reviewed-by: David Schulz <david.schulz@qt.io>